# candle

./: .gitignore  Makefile  README.md  analyze.py  backtest_compare.py  backtest_reason.py  backtest_type1.py  backtest_type1_2.py  backtest_type2.py  backtest_type4.py  backtest_type4_2.py  candle.sh  check_etf.py  crontab.txt  debug_mcap.py  debug_mcap_v2.py  fetch_data.py  find_etf_symbols.py  gemini_guide.md  gmail_sender.py  lessons.md  main.py  mm.md  prompt.txt  pyproject.toml  report.md  search_ticker.py  test_kodex200.py  test_markets.py  test_pykrx.py  test_pykrx_market.py  test_pykrx_old.py  test_raw_krx.py  worklog.md
.gemini/: plan.md
.github/: copilot-instructions.md
.github/instructions/: global.worklog.instructions.md
.github/skills/coding-style-check/: SKILL.md
.github/skills/git-commit/: SKILL.md
.github/skills/skill-sync-manager/: SKILL.md
.github/skills/worklog-manager/: SKILL.md
.github/vscode-skills/: coding-style-check.md  git-commit.md  skill-sync-manager.md  worklog-manager.md
backtest/type1/: type1_1.py  type1_2.py
backtest/type2/: type2_1.py  type2_2.py
backtest/type3/: type3.py
claude/: ToDo.md  claude-code-in-intranet.md  claude-opus-4-7_guide.md  claude-work.md  gemini_analysis_report.md  msg.md  register_etf_ticker.md  req.md  research_to_increase_stock_count.md
config/: periods.yml  recipients.yml  runtime.yml  strategies.yml  universe.yml
data/: worklog.json
simulation/: engine.py
src/candle/: __init__.py  cli.py  config.py  io_report.py
src/candle/analyze/: __init__.py  indicators.py  inflection.py  run.py  (+1 more)
(+54 files in other folders)
