[project]
name = "candle"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "finance-datareader>=0.9.110",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "pandas>=3.0.2",
    "pykrx>=1.0.51",
    "requests>=2.33.1",
    "setuptools==69.5.1",
    "yfinance>=1.3.0",
]
