[project]
name = "candle"
version = "0.2.0"
description = "Stock backtest pipeline (KOSPI200 / S&P500 / ETF) — fetch / analyze / backtest"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "finance-datareader>=0.9.110",
    "google-api-python-client>=2.194.0",
    "google-auth-httplib2>=0.3.1",
    "google-auth-oauthlib>=1.3.1",
    "pandas>=2.2.0",
    "pykrx>=1.0.45",
    "yfinance>=0.2.40",
    "pyyaml>=6.0.1",
    "typer>=0.12.0",
    "pydantic>=2.7.0",
    "jinja2>=3.1.4",
    "requests>=2.32.0",
    "lxml>=5.2.0",
    "beautifulsoup4>=4.12.0",
    "anthropic>=0.92.0",
]

[project.scripts]
candle = "candle.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/candle"]
